--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <footer class="app__footer">
             <p class="app__footer-text">
-                Projeto fictício e sem fins comerciais. Imagens geradas por IA no Adobe Firefly.Desenvolvido por Alura.
+                Desenvolvido por Rodrigo com finalidade de aprendizagem de HTML,CSS,JAVASCRIPT.
             </p>
         </footer>
     </main>
