--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                         <span>Começar</span>
                     </button>
                 </div>
+
+                <a href="https://conexao.pucminas.br/blog/dicas/metodo-pomodoro-de-estudo/?gad_source=1&gclid=CjwKCAiA1fqrBhA1EiwAMU5m_3kCbPlGkxDdJyauck6hhPUSvoD05rGqvvcWyoj41vUO-malXTjGmhoCZNcQAvD_BwE" target="_blank">Sobre o método de estudo Pomodoro.</a>
             </div>
         </section>
 
